7. Балансир [#505083 #473709]