@@ -1,136 +1,79 @@
 package ru.j4j.iterator;
 
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.BeforeEach;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 
-import static org.assertj.core.api.Assertions.assertThat;
+public class BalancerTest {
 
-class BalancerTest {
-    @Test
-    void whenSingleAndIteratorThree() {
-        List<ArrayList<Integer>> nodes = List.of(
-                new ArrayList<>()
-        );
-        Iterator<Integer> source = List.of(1, 2, 3).iterator();
-        Balancer.split(nodes, source);
-        assertThat(nodes).isEqualTo(
-                List.of(
-                        List.of(1, 2, 3)
-                )
-        );
+    private List<List<Integer>> nodes;
+    private Iterator<Integer> source;
+
+    @BeforeEach
+    void setUp() {
+        nodes = new ArrayList<>();
+        nodes.add(new ArrayList<>());
+        nodes.add(new ArrayList<>());
+        nodes.add(new ArrayList<>());
+
+        source = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9).iterator();
     }
 
     @Test
-    void whenThreeListsAndIteratorEmpty() {
-        List<ArrayList<Integer>> nodes = List.of(
-                new ArrayList<>(),
-                new ArrayList<>(),
-                new ArrayList<>()
-        );
-        Iterator<Integer> source = Collections.emptyIterator();
+    void testSplit() {
         Balancer.split(nodes, source);
-        assertThat(nodes).containsExactlyInAnyOrder(
-                new ArrayList<>(),
-                new ArrayList<>(),
-                new ArrayList<>()
-        );
+
+        assertThat(nodes.get(0)).containsExactly(1, 4, 7);
+        assertThat(nodes.get(1)).containsExactly(2, 5, 8);
+        assertThat(nodes.get(2)).containsExactly(3, 6, 9);
     }
 
     @Test
-    void whenTwoListsAndIteratorThree() {
-        List<ArrayList<Integer>> nodes = List.of(
-                new ArrayList<>(),
-                new ArrayList<>()
-        );
-        Iterator<Integer> source = List.of(1, 2, 3).iterator();
+    void testSplitEmptySource() {
+        source = new ArrayList<Integer>().iterator();
         Balancer.split(nodes, source);
-        assertThat(nodes).containsExactlyInAnyOrder(
-                new ArrayList<>(List.of(1, 3)),
-                new ArrayList<>(List.of(2))
-        );
+
+        assertThat(nodes.get(0)).isEmpty();
+        assertThat(nodes.get(1)).isEmpty();
+        assertThat(nodes.get(2)).isEmpty();
     }
 
     @Test
-    void whenThreeListsAndIteratorThree() {
-        List<ArrayList<Integer>> nodes = List.of(
-                new ArrayList<>(),
-                new ArrayList<>(),
-                new ArrayList<>()
-        );
-        Iterator<Integer> source = List.of(1, 2, 3).iterator();
+    void testSplitSingleNode() {
+        nodes = new ArrayList<>();
+        nodes.add(new ArrayList<>());
+        source = Arrays.asList(1, 2, 3).iterator();
+
         Balancer.split(nodes, source);
-        assertThat(nodes).containsExactlyInAnyOrder(
-                new ArrayList<>(List.of(1)),
-                new ArrayList<>(List.of(2)),
-                new ArrayList<>(List.of(3))
-        );
+
+        assertThat(nodes.get(0)).containsExactly(1, 2, 3);
     }
 
     @Test
-    void whenThreeListsAndIteratorTwo() {
-        List<ArrayList<Integer>> nodes = List.of(
-                new ArrayList<>(),
-                new ArrayList<>(),
-                new ArrayList<>()
-        );
-        Iterator<Integer> source = List.of(1, 2).iterator();
-        Balancer.split(nodes, source);
-        assertThat(nodes).containsExactlyInAnyOrder(
-                new ArrayList<>(List.of(1)),
-                new ArrayList<>(List.of(2)),
-                new ArrayList<>()
-        );
+    void testSplitNullNodes() {
+        assertThatThrownBy(() -> Balancer.split(null, source))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessage("Nodes and source must not be null");
     }
 
     @Test
-    void whenThreeListsAndIteratorFour() {
-        List<ArrayList<Integer>> nodes = List.of(
-                new ArrayList<>(),
-                new ArrayList<>(),
-                new ArrayList<>()
-        );
-        Iterator<Integer> source = List.of(1, 2, 3, 4).iterator();
-        Balancer.split(nodes, source);
-        assertThat(nodes).containsExactlyInAnyOrder(
-                new ArrayList<>(List.of(1, 4)),
-                new ArrayList<>(List.of(2)),
-                new ArrayList<>(List.of(3))
-        );
+    void testSplitNullSource() {
+        assertThatThrownBy(() -> Balancer.split(nodes, null))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessage("Nodes and source must not be null");
     }
 
     @Test
-    void whenThreeListsAndIteratorFive() {
-        List<ArrayList<Integer>> nodes = List.of(
-                new ArrayList<>(),
-                new ArrayList<>(),
-                new ArrayList<>()
-        );
-        Iterator<Integer> source = List.of(1, 2, 3, 4, 5).iterator();
-        Balancer.split(nodes, source);
-        assertThat(nodes).containsExactlyInAnyOrder(
-                new ArrayList<>(List.of(1, 4)),
-                new ArrayList<>(List.of(2, 5)),
-                new ArrayList<>(List.of(3))
-        );
-    }
-
-    @Test
-    void whenThreeListsAndIteratorSix() {
-        List<ArrayList<Integer>> nodes = List.of(
-                new ArrayList<>(),
-                new ArrayList<>(),
-                new ArrayList<>()
-        );
-        Iterator<Integer> source = List.of(1, 2, 3, 4, 5, 6).iterator();
-        Balancer.split(nodes, source);
-        assertThat(nodes).containsExactlyInAnyOrder(
-                new ArrayList<>(List.of(1, 4)),
-                new ArrayList<>(List.of(2, 5)),
-                new ArrayList<>(List.of(3, 6))
-        );
+    void testSplitEmptyNodes() {
+        nodes = new ArrayList<>();
+        assertThatThrownBy(() -> Balancer.split(nodes, source))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessage("Nodes list must not be empty");
     }
 }
